<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_working_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_working_days"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/layout_working_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout_working_days"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_working_days">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_monday"
            style="@style/TextWorkingDaysStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tuesday"
            style="@style/TextWorkingDaysStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_wednesday"
            style="@style/TextWorkingDaysStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_thursday"
            style="@style/TextWorkingDaysStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_friday"
            style="@style/TextWorkingDaysStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_saturday"
            style="@style/TextWorkingDaysStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_sunday"
            style="@style/TextWorkingDaysStyle"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_bedtime_and_wakeup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bedtime"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_working_days"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bedtime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_layout_working_days"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_bedtime_and_wakeup" >

        <ImageView
            android:id="@+id/image_bedtime"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_king_bed"
            android:layout_marginStart="44dp"
            android:layout_marginTop="10dp"
            app:tint="@color/text_bedtime_and_wakeup_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/text_bedtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_bedtime_2"
            android:textAllCaps="true"
            android:textSize="10sp"
            android:textColor="@color/text_bedtime_and_wakeup_time"
            android:layout_marginLeft="4dp"
            app:layout_constraintTop_toTopOf="@id/image_bedtime"
            app:layout_constraintBottom_toBottomOf="@id/image_bedtime"
            app:layout_constraintLeft_toRightOf="@id/image_bedtime"/>

        <ImageView
            android:id="@+id/image_wakeup_time"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_notifications"
            android:layout_marginEnd="4dp"
            app:tint="@color/text_bedtime_and_wakeup_time"
            app:layout_constraintTop_toTopOf="@id/text_wakeup"
            app:layout_constraintBottom_toBottomOf="@id/text_wakeup"
            app:layout_constraintRight_toLeftOf="@id/text_wakeup"/>

        <TextView
            android:id="@+id/text_wakeup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_wakeup"
            android:textAllCaps="true"
            android:textSize="10sp"
            android:textColor="@color/text_bedtime_and_wakeup_time"
            android:layout_marginEnd="44dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/text_bedtime_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/text_bedtime"
            app:layout_constraintRight_toRightOf="@id/text_bedtime"
            app:layout_constraintTop_toBottomOf="@id/text_bedtime"/>

        <TextView
            android:id="@+id/text_wakeup_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/text_wakeup"
            app:layout_constraintRight_toRightOf="@id/text_wakeup"
            app:layout_constraintTop_toBottomOf="@id/text_wakeup"/>

        <com.example.bedtimeios.custom.BedTimeSeekBar
            android:id="@+id/mprogress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:indicator_color="@color/gray"
            app:sweep_angle="180"
            app:start_angle="90"
            app:layout_constraintBottom_toTopOf="@id/text_total_time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_bedtime_value" />

        <TextView
            android:id="@+id/text_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="17 giờ 40 phút"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>